tests/ui/errors/snapshots/parse_tuple_too_large_type.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid tuple
   ╭─[test.lis:2:12]
 1 │ 
 2 │ fn test(x: (int, int, int, int, int, int)) {}
   ·            ───────────────┬──────────────
   ·                           ╰── 6-element tuple not allowed
   ╰────
  help: For >5 elements, use a struct with named fields · code: [parse.tuple_element_count]
