tests/ui/errors/snapshots/parse_typed_binding_missing_initializer.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing initializer
   ╭─[test.lis:3:14]
 2 │ fn test() {
 3 │   let mut x: atomic.Int64
   ·              ──────┬─────
   ·                    ╰── annotated binding needs a value
 4 │ }
   ╰────
  help: Bindings must be initialized · code: [parse.missing_initializer]
