tests/ui/errors/snapshots/parse_unclosed_function_type_preserves_next_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:15]
 1 │ 
 2 │ fn f(g: fn(int
   ·               ▲
   ·               ╰── expected `,` or `)`
 3 │ 
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
