tests/ui/errors/snapshots/parse_unclosed_params_preserve_documented_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:1]
 3 │ 
 4 │ /// Documented.
   · ───────┬───────
   ·        ╰── expected a type
 5 │ fn documented() {
   ╰────
  help: Add the missing type · code: [parse.syntax_error]
