tests/ui/errors/snapshots/parse_unclosed_params_preserve_next_struct_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:1]
 3 │ 
 4 │ struct S {
   · ───┬──
   ·    ╰── expected a type
 5 │   a: int,
   ╰────
  help: Add the missing type · code: [parse.syntax_error]
