tests/ui/errors/snapshots/parse_unclosed_params_stop_at_next_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:1]
 3 │ 
 4 │ fn main() {
   · ─┬
   ·  ╰── expected a type
 5 │   let _ = 1
   ╰────
  help: Add the missing type · code: [parse.syntax_error]
