tests/ui/errors/snapshots/parse_unclosed_struct_pattern_before_declaration_terminates.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:6:1]
 5 │ 
 6 │ fn other() {}
   · ─┬
   ·  ╰── expected identifier
   ╰────
  help:  · code: [parse.unexpected_token]
