tests/ui/errors/snapshots/parse_unclosed_tuple_struct_recovers_at_fn_definition.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:1]
 2 │ struct Foo(int,
 3 │ fn main() {}
   · ─┬
   ·  ╰── expected `)`
   ╰────
  code: [parse.unexpected_token]
