tests/ui/errors/snapshots/parse_unclosed_tuple_type_preserves_next_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:1]
 3 │ 
 4 │ fn main() {
   · ─┬
   ·  ╰── expected `)`
 5 │   let _ = 1
   ╰────
  code: [parse.unexpected_token]
