tests/ui/errors/snapshots/parse_unclosed_typed_params_preserve_next_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:13]
 1 │ 
 2 │ fn id(x: int
   ·             ▲
   ·             ╰── expected `,` or `)`
 3 │ 
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
